<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center">

    <ToggleButton
        android:id="@+id/toggle_device_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_device_admin"
        android:textOff="@string/device_admin_disabled"
        android:textOn="@string/device_admin_enabled" />

    <Button
        android:id="@+id/button_lock_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_device"
         />

    <Button
        android:id="@+id/button_reset_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_device"
         />

    <Button
        android:id="@+id/button_record_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_audio"
        />

    <Button
        android:id="@+id/button_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        />

    <Button
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        />

</LinearLayout>
